Update index.html With 3D Printer

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 						<!-- Work -->
 							<article id="3D_Printer">
-								<h2 class="major"><a href="http://mainsail">3D Printer</a></h2>
-								<span class="image main"><a href="http://mainsail"><img src="images/logo-mainsail.png" alt="" /></a></span>
+								<h2 class="major"><a href="https://ender_3_v2_neo.octoeverywhere.com">3D Printer</a></h2>
+								<span class="image main"><a href="https://ender_3_v2_neo.octoeverywhere.com"><img src="images/logo-mainsail.png" alt="" /></a></span>
 								<p>Click on the image or header to go to 3D Printer.</p>
 							</article>
 
