--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
 								<li><a href="#3D_Printer">3D Printer</a></li>
 								<li><a href="#network">Network</a></li>
 								<li><a href="#notes">Notes</a></li>
+								<li><a href="/projects/">Projects</a></li>
 								<li><a href="#about">About</a></li>
 							</ul>
 						</nav>
