--- a/projects/Nehoran-Sticker-Translate/index.html
+++ b/projects/Nehoran-Sticker-Translate/index.html
@@ -276,11 +276,11 @@
         const defaultMappings = [
             { hebrew: 'א', code: '17' }, { hebrew: 'ב', code: '' }, { hebrew: 'ג', code: '50' },
             { hebrew: 'ד', code: 'A' }, { hebrew: 'ה', code: '7' }, { hebrew: 'ו', code: '18' },
-            { hebrew: 'ז', code: 'E' }, { hebrew: 'ח', code: 'H' }, { hebrew: 'ט', code: '' },
+            { hebrew: 'ז', code: 'E' }, { hebrew: 'ח', code: '8' }, { hebrew: 'ט', code: '' },
             { hebrew: 'י', code: 'P' }, { hebrew: 'כ', code: '0' }, { hebrew: 'ל', code: 'G' },
             { hebrew: 'מ', code: '74' }, { hebrew: 'נ', code: '' }, { hebrew: 'ס', code: 'C' },
             { hebrew: 'ע', code: 'X' }, { hebrew: 'פ', code: '' }, { hebrew: 'צ', code: 'M' },
-            { hebrew: 'ק', code: 'T' }, { hebrew: 'ר', code: '' }, { hebrew: 'ש', code: 'Z' },
+            { hebrew: 'ק', code: 'T' }, { hebrew: 'ר', code: '6' }, { hebrew: 'ש', code: 'Z' },
             { hebrew: 'ת', code: '9' },
             { hebrew: 'ם', code: '' }, { hebrew: 'ן', code: '' }, { hebrew: 'ץ', code: '' },
             { hebrew: 'ף', code: '' }, { hebrew: 'ך', code: '' }
@@ -480,3 +480,4 @@
 </body>
 
 </html>
+
